--- a/code/Data_Processing_and_Feature_Engineering.ipynb
+++ b/code/Data_Processing_and_Feature_Engineering.ipynb
@@ -32,14 +32,14 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import datetime\n",
-    "import time\n",
+    "# import time\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
-    "import seaborn as sns\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# %matplotlib inline\n",
+    "# import seaborn as sns\n",
     "\n",
-    "import geopandas as gpd # to identify neighboring water systems via ZIP code\n",
-    "from shapely.geometry import Point, Polygon"
+    "# import geopandas as gpd # to identify neighboring water systems (could be done)\n",
+    "# from shapely.geometry import Point, Polygon"
    ]
   },
   {
