--- a/code/Modelling.ipynb
+++ b/code/Modelling.ipynb
@@ -9,17 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import pandas_profiling # try: fast way to perform exploratory data analysis of a Pandas Dataframe\n",
     "import numpy as np\n",
     "import datetime\n",
     "import time\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
+    "# %matplotlib notebook\n",
+    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
     "import statsmodels\n",
@@ -31,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +367,7 @@
        "had_pesticide_violation_lastyear                                    0  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,8 +400,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploratory Data Analysis\n",
+    "\n",
+    "We have a look at the features we pre-selected for the modelling, we the use of the _pandas-profiling_ package."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data.profile_report() \n",
+    "profile = data.profile_report(title='Initial Exploration of Dataset')\n",
+    "profile.to_file(output_file=\"../documents/Initial Exploration of Dataset.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
