upodate data processing

--- a/code/Data_Processing_and_Feature_Engineering.ipynb
+++ b/code/Data_Processing_and_Feature_Engineering.ipynb
@@ -25,13 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 569,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import datetime\n",
+    "import pandas_profiling # fast way to perform exploratory data analysis of a Pandas Dataframe\n",
     "# import time\n",
     "\n",
     "# import matplotlib.pyplot as plt\n",
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 526,
    "metadata": {
     "scrolled": false
    },
@@ -701,7 +702,7 @@
        "county_served                                 Cumberland  "
       ]
      },
-     "execution_count": 195,
+     "execution_count": 526,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 527,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +724,7 @@
        "(10476, 49)"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 527,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 528,
    "metadata": {
     "scrolled": false
    },
@@ -926,7 +927,7 @@
        "4      Cumberland               5.0  "
       ]
      },
-     "execution_count": 216,
+     "execution_count": 528,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 529,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +975,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 344,
+     "execution_count": 529,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 530,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 531,
    "metadata": {
     "scrolled": false
    },
@@ -1166,7 +1167,7 @@
        "quarter                          2          3          4          1          1"
       ]
      },
-     "execution_count": 372,
+     "execution_count": 531,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1213,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 532,
    "metadata": {
     "scrolled": true
    },
@@ -1224,7 +1225,7 @@
        "91"
       ]
      },
-     "execution_count": 373,
+     "execution_count": 532,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1242,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 533,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1254,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 534,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1271,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 535,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1331,7 @@
        "Name: contaminant_name, dtype: int64"
       ]
      },
-     "execution_count": 376,
+     "execution_count": 535,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1342,16 +1343,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Selection of the Contaminants of Interest: Pesticides\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 536,
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1353,7 @@
        "2721"
       ]
      },
-     "execution_count": 377,
+     "execution_count": 536,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1372,28 +1365,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 556,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "8000    2630\n",
-       "Name: contaminant_code, dtype: int64"
-      ]
-     },
-     "execution_count": 378,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8000    2630\n",
+      "Name: contaminant_code, dtype: int64\n"
+     ]
     }
    ],
    "source": [
     "# let's check those and find why:\n",
     "empty_cont_name = violations_cont[violations_cont['contaminant_name'].isnull() == True]\n",
     "# empty_cont_name.contaminant_code.isnull().sum() # only 91 miss a contaminant code\n",
-    "empty_cont_name.contaminant_code.value_counts()\n",
+    "print(empty_cont_name.contaminant_code.value_counts())\n",
     "# 8000: not found ==> it is the \"Revised Total Coliform Rule\", \n",
-    "# c.f: https://www.epa.gov/sites/production/files/2018-06/documents/2017_annual_dc_drinking_water_compliance_report_508_0.pdf \n"
+    "# c.f: https://www.epa.gov/sites/production/files/2018-06/documents/2017_annual_dc_drinking_water_compliance_report_508_0.pdf\n",
+    "\n",
+    "# we replace the missing names:\n",
+    "violations_cont.loc[violations_cont['contaminant_code'] == '8000', \n",
+    "                    'contaminant_name'] = \"Revised Total Coliform Rule\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Selection of the Contaminants of Interest: Pesticides\n"
    ]
   },
   {
@@ -1405,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 558,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1423,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 559,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1432,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 560,
    "metadata": {
     "scrolled": true
    },
@@ -1450,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 561,
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1463,7 @@
        "Name: is_pesticide, dtype: int64"
       ]
      },
-     "execution_count": 382,
+     "execution_count": 561,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1483,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 562,
    "metadata": {
     "scrolled": false
    },
@@ -1513,16 +1515,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have now a dataset with all the information about the water systems repeated for all the years of interest. We need to add new columns to this data framt that indicate if there was a violation in a given year. In a second step we can engineer new features, for instance indicating past violations.\n"
+    "We have now a dataset with all the information about the water systems repeated for all the years of interest. We need to add new columns to this data frame that indicate if there was a violation in a given year. In a second step we can engineer new features, for instance indicating past violations.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 563,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# in this chunk, we the violations and pesticide violations by water system and year\n",
+    "# in this chunk, we count (aggregation) the violations and pesticide violations by water system and year\n",
     "\n",
     "# group by year and water system to count the number of violations:\n",
     "yearly_viol_count = violations_cont.groupby(['pwsid', \n",
@@ -1544,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 564,
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1808,7 @@
        "n_pesticide_viol                                   NaN  "
       ]
      },
-     "execution_count": 456,
+     "execution_count": 564,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1833,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 565,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1843,7 +1845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 566,
    "metadata": {
     "scrolled": false
    },
@@ -2131,7 +2133,7 @@
        "had_pesticide_violation                              0  "
       ]
      },
-     "execution_count": 475,
+     "execution_count": 566,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2167,7 +2169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 567,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2182,8 +2184,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploratory Data Analysis\n",
+    "\n",
+    "We have a look at the features we pre-selected for the modelling, we the use of the _pandas-profiling_ package. We then decide on how to handle the issues."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 570,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data.profile_report() # use this line to generate profile in this notebook.\n",
+    "profile = ws_years_viol.profile_report(title='Initial Exploration of Dataset')\n",
+    "profile.to_file(output_file=\"../documents/Initial Exploration of Dataset.html\") # profile generated as html\n",
+    "# look at this document to see data profile..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 573,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pwsid                                   0\n",
+       "pws_name                                0\n",
+       "primacy_agency_code                     0\n",
+       "pws_type_code                           0\n",
+       "gw_sw_code                             35\n",
+       "owner_type_code                         0\n",
+       "population_served_count                 0\n",
+       "primary_source_code                    35\n",
+       "is_wholesaler_ind                       0\n",
+       "is_school_or_daycare_ind                0\n",
+       "service_connections_count               0\n",
+       "source_water_protection_code        33649\n",
+       "cities_served                           0\n",
+       "counties_served                         0\n",
+       "ansi_entity_code                        0\n",
+       "year                                    0\n",
+       "n_viol                                  0\n",
+       "n_pesticide_viol                        0\n",
+       "had_violation                           0\n",
+       "had_pesticide_violation                 0\n",
+       "had_violation_lastyear              10476\n",
+       "had_pesticide_violation_lastyear    10476\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 573,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ws_years_viol.isnull().sum() # another way to identify missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 574,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We will drop the column \"source_water_protection_code\", as there are lots of NAs\n",
+    "ws_years_viol.drop(\"source_water_protection_code\", axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 580,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# Then we have a closer look at the missing gw_sw_code and primary_source_code:\n",
+    "ws_years_viol.loc[ws_years_viol['gw_sw_code'].isnull()]\n",
+    "# they are all privately owned from MA, but different type of water systems.\n",
+    "# (data are missing for all years)\n",
+    "\n",
+    "# I have no way of inputing these values (source of the water), so I exclude those cases.\n",
+    "ws_years_viol.dropna(axis=0, how='any', subset=['gw_sw_code', 'primary_source_code'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Saving Dataset for Modelling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 582,
    "metadata": {
     "scrolled": false
    },
