save. error cannot import imblearn for SMOTE...

--- a/code/Data_Processing_and_Feature_Engineering.ipynb
+++ b/code/Data_Processing_and_Feature_Engineering.ipynb
@@ -2282,13 +2282,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 582,
+   "execution_count": 583,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "ws_years_viol.to_csv('../data/data_input_for_model.csv')"
+    "ws_years_viol.to_csv('../data/data_input_for_model.csv', index=False)"
    ]
   },
   {
