--- a/code/Data_Processing_and_Feature_Engineering.ipynb
+++ b/code/Data_Processing_and_Feature_Engineering.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 569,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 531,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -1167,7 +1167,7 @@
        "quarter                          2          3          4          1          1"
       ]
      },
-     "execution_count": 531,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,6 +1232,29 @@
    ],
    "source": [
     "violations.contaminant_code.isnull().sum() # 91 violations without specified contaminant. those will be lost..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1979, 1980, 1981, 1982, 1983, 1984, 1985, 1986, 1987, 1988, 1989,\n",
+       "       1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000,\n",
+       "       2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011,\n",
+       "       2012, 2013, 2014, 2015, 2016, 2017, 2018])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sort(violations.year.unique())\n"
    ]
   },
   {
@@ -1337,7 +1360,7 @@
     }
    ],
    "source": [
-    "# most occuring violations in New Hampshire:\n",
+    "# most occuring violations in New England:\n",
     "# (not all are contaminants, nor pesticides)\n",
     "violations_cont.contaminant_name.value_counts().head(50)"
    ]
@@ -2322,7 +2345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
