add pesticide use

--- a/code/Data_Extraction.ipynb
+++ b/code/Data_Extraction.ipynb
@@ -18,14 +18,14 @@
     "\n",
     "The aim of this notebook is to extract the different datasets that will be used later.  \n",
     "\n",
-    "We first extract data from EPA's Safe Drinking Water Information System ([SDWIS](https://www.epa.gov/enviro/sdwis-model)) for the [water systems](https://enviro.epa.gov/enviro/ef_metadata_html.ef_metadata_table?p_table_name=WATER_SYSTEM&p_topic=SDWIS), for their characteristics (notably where the ZIP code where they are situated) and for the Maximum Contaminant Levels (MCLs) [violations](https://enviro.epa.gov/enviro/ef_metadata_html.ef_metadata_table?p_table_name=VIOLATION&p_topic=SDWIS) (notably which contaminants and when).  \n",
+    "I first extract data from EPA's Safe Drinking Water Information System ([SDWIS](https://www.epa.gov/enviro/sdwis-model)) for the [water systems](https://enviro.epa.gov/enviro/ef_metadata_html.ef_metadata_table?p_table_name=WATER_SYSTEM&p_topic=SDWIS), for their characteristics (notably where the ZIP code where they are situated) and for the Maximum Contaminant Levels (MCLs) [violations](https://enviro.epa.gov/enviro/ef_metadata_html.ef_metadata_table?p_table_name=VIOLATION&p_topic=SDWIS) (notably which contaminants and when).  \n",
     "\n",
-    "Then, \n"
+    "Then, the datasets are saved and reloaded in the _Data_Processing_and_Feature_Engineering_ notebook.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
     "water_system = water_system[1:] # take the data less the header row\n",
     "water_system.columns = new_header # set the header row as the df header\n",
     "\n",
-    "# we remove the last column of null, that is an artifact of the extraction:\n",
+    "# I remove the last column of null, that is an artifact of the extraction:\n",
     "water_system = water_system.dropna(axis = 1, how='all') # axis = 1 = columns\n",
     "\n",
     "water_system.tail() # looks good for now."
@@ -2035,7 +2035,7 @@
     "geo_ws = geo_ws[1:] # take the data less the header row\n",
     "geo_ws.columns = new_header # set the header row as the df header\n",
     "\n",
-    "# we remove the last column of null, that is an artifact of the extraction:\n",
+    "# I remove the last column of null, that is an artifact of the extraction:\n",
     "geo_ws = geo_ws.dropna(axis = 1, how='all') # axis = 1 = columns\n",
     "\n",
     "geo_ws.sort_values(by='pwsid', inplace=True)\n",
@@ -2075,7 +2075,7 @@
     }
    ],
    "source": [
-    "# we link this information to the water systems:\n",
+    "# I link this information to the water systems:\n",
     "\n",
     "water_system = water_system.merge(ws_county, how='left')\n",
     "water_system.shape"
@@ -2087,7 +2087,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We save the raw \"clean\" data as csv, in case the API should stop to work in the future:\n",
+    "# I save the raw \"clean\" data as csv, in case the API should stop to work in the future:\n",
     "if I_WANT_TO_RESAVE_THE_DATA:\n",
     "    water_system.to_csv('../data/active_water_systems_NewEngland.csv')"
    ]
@@ -2613,7 +2613,7 @@
     "violations = violations[1:] # take the data less the header row\n",
     "violations.columns = new_header # set the header row as the df header\n",
     "\n",
-    "# we remove the last column of null, that is an artifact of the extraction:\n",
+    "# I remove the last column of null, that is an artifact of the extraction:\n",
     "violations = violations.dropna(axis = 1, how='all') # axis = 1 = columns\n",
     "\n",
     "# transform the dates to datetime:\n",
@@ -2630,7 +2630,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We save the raw \"clean\" data as csv, in case the API should stop to work in the future:\n",
+    "# I save the raw \"clean\" data as csv, in case the API should stop to work in the future:\n",
     "if I_WANT_TO_RESAVE_THE_DATA:\n",
     "    violations.to_csv('../data/violations_NewEngland.csv')"
    ]
@@ -2916,7 +2916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -3021,7 +3021,7 @@
        "4        12646.9  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3031,7 +3031,7 @@
     "\n",
     "# the years 2009-2014 are directly accessible via URL:\n",
     "\n",
-    "# We first query to get the first year (2009), and then we will append more years:\n",
+    "# I first query to get the first year (2009), and then we will append more years:\n",
     "URL = 'https://water.usgs.gov/nawqa/pnsp/usage/maps/county-level/PesticideUseEstimates/EPest.county.estimates.2009.txt'\n",
     "pesticide_use_2009_14 = pd.read_csv(URL, sep='\\t')\n",
     "\n",
@@ -3049,6 +3049,26 @@
     "\n",
     "print(pesticide_use_2009_14.shape)\n",
     "pesticide_use_2009_14.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2009, 2010, 2011, 2012, 2013, 2014])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pesticide_use_2009_14.YEAR.unique()"
    ]
   },
   {
