--- a/code/Data_Extraction.ipynb
+++ b/code/Data_Extraction.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2101,7 +2101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2348,7 +2348,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2375,9 +2375,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2596,7 +2596,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2622,6 +2622,32 @@
     "violations.compl_per_end_date = pd.to_datetime(violations.compl_per_end_date)\n",
     "\n",
     "violations.tail() # looks good for now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count                   90296\n",
+       "unique                   4572\n",
+       "top       2015-03-05 00:00:00\n",
+       "freq                     1340\n",
+       "first     1984-02-01 00:00:00\n",
+       "last      2018-09-21 00:00:00\n",
+       "Name: rtc_date, dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "violations.rtc_date.describe()"
    ]
   },
   {
