update description in data_extraction

--- a/code/Data_Extraction.ipynb
+++ b/code/Data_Extraction.ipynb
@@ -18,9 +18,14 @@
     "\n",
     "The aim of this notebook is to extract the different datasets that will be used later.  \n",
     "\n",
-    "I first extract data from EPA's Safe Drinking Water Information System ([SDWIS](https://www.epa.gov/enviro/sdwis-model)) for the [water systems](https://enviro.epa.gov/enviro/ef_metadata_html.ef_metadata_table?p_table_name=WATER_SYSTEM&p_topic=SDWIS), for their characteristics (notably where the ZIP code where they are situated) and for the Maximum Contaminant Levels (MCLs) [violations](https://enviro.epa.gov/enviro/ef_metadata_html.ef_metadata_table?p_table_name=VIOLATION&p_topic=SDWIS) (notably which contaminants and when).  \n",
+    "I first extract data from EPA's Safe Drinking Water Information System ([SDWIS](https://www.epa.gov/enviro/sdwis-model)) about:\n",
+    "* the [water systems](https://enviro.epa.gov/enviro/ef_metadata_html.ef_metadata_table?p_table_name=WATER_SYSTEM&p_topic=SDWIS) and their characteristics\n",
+    "* the Maximum Contaminant Levels (MCLs) and other types of [violations](https://enviro.epa.gov/enviro/ef_metadata_html.ef_metadata_table?p_table_name=VIOLATION&p_topic=SDWIS) (notably which contaminants and when).\n",
+    "* the [geographic localization](https://enviro.epa.gov/enviro/ef_metadata_html.ef_metadata_table?p_table_name=GEOGRAPHIC_AREA&p_topic=SDWIS) of the water systems (by county)\n",
     "\n",
-    "Then, the datasets are saved and reloaded in the _Data_Processing_and_Feature_Engineering_ notebook.\n"
+    "I also download data about [estimated pesticid use by county and year](https://water.usgs.gov/nawqa/pnsp/usage/maps/county-level/).  \n",
+    "\n",
+    "Then, the datasets are saved and reloaded in the *Data_Processing_and_Feature_Engineering* notebook.\n"
    ]
   },
   {
